rename: views locale file

--- a/insta/config/locales/views/en.yml
+++ b/insta/config/locales/views/en.yml
@@ -10,6 +10,15 @@ en:
         profile: Profile
   views:
     users:
+      acccounts:
+        followers:
+          _empty:
+            title: Looking for followers?
+            description: When someone follows this account, they'll show up here. Posting and interacting with others helps boost followers.
+        followings:
+          _empty:
+            title: Be in the know
+            description: Following accounts is an easy way to curate your timeline and know what's happening with the topics and people you're interested in.
       bookmarks:
         _empty:
           title: Save posts for later
